--- a/ranch/index.html
+++ b/ranch/index.html
@@ -27,9 +27,9 @@
     <nav>
         <ul>
             <li><a href="index.html">Services</a></li>
-            <li><a href="#">Location</a></li>
-            <li><a href="#">Events</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="index.html">Location</a></li>
+            <li><a href="index.html">Events</a></li>
+            <li><a href="index.html">Contact</a></li>
         </ul>
     </nav>
 
