--- a/assignment-portal.html
+++ b/assignment-portal.html
@@ -21,7 +21,7 @@
         <h1>WDD 230 : Assignment Portal </h1>
         <hr>
         <ul>
-            <li>Lesson 02 : <a href="lesson2/design-principles.html">Design Principles</a></li>
+            <li>Lesson 02 : <a href="lesson2/design-principles.html">Design Principles</a> <a href="ranch/index.html">ranch</a></li>
         </ul>
 
         <ul>
