--- a/water_cycle/condensation.html
+++ b/water_cycle/condensation.html
@@ -53,11 +53,9 @@
     <!-- CONTENT HERE -->
     <main>
         <h1>Condensation</h1>
-        <p>Diam sit amet quam vehicula elementum sed sit amet dui. Quisque velit nisi, pretium ut lacinia in, elementum
-            id enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis lorem ut libero malesuada
-            feugiat. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Mauris blandit aliquet elit, eget
-            tincidunt nibh pulvinar a. Pellentesque in ipsum id orci porta dapibus. Pellentesque in ipsum id orci porta
-            dapibus. Curabitur aliquet quam id dui posuere blandit. Sed porttitor lectus nibh. </p>
+        <p>Condensation is the transformation of water vapor into liquid. It is the inverse of evaporation, in which liquid water
+        turns into a vapor. Condensation occurs in one of two ways: the air is either chilled to its dew point or gets so
+        saturated with water vapor that it cannot retain any more water.Condensation can also produce water droplets on the outside of soda cans or glasses of cold water. When warm air hits the cold surface, it reaches its dew point and condenses. This leaves droplets of water on the glass or can.</p>
     </main>
 
     <!-- FOOTER HERE -->
