--- a/water_cycle/collection.html
+++ b/water_cycle/collection.html
@@ -53,11 +53,9 @@
     <!-- CONTENT HERE -->
     <main>
         <h1>Collection</h1>
-        <p>Vestibulum ac diam sit amet quam isque velit nisi, pretium ut lacinia in, elementum id enim. Lorem ipsum
-            dolor sit amet, consectetur adipiscing elit. Nulla quis lorem ut libero malesuada feugiat. Mauris blandit
-            aliquet elit, eget tincidunt nibh pulvinar a. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
-            Pellentesque in ipsum id orci porta dapibus. Pellentesque in ipsum id orci porta dapibus. Curabitur aliquet
-            quam id dui posuere blandit. Sed porttitor lectus nibh. </p>
+        <p>What Is Collection Water Cycle? Collection: This is when water that falls from the clouds as rain snow hail or sleet
+        collects in the oceans rivers lakes streams. Most will infiltrate (soak into) the ground and will collect as underground
+        water. </p>
     </main>
 
     <!-- FOOTER HERE -->
