--- a/water_cycle/index.html
+++ b/water_cycle/index.html
@@ -53,11 +53,9 @@
     <!-- CONTENT HERE -->
     <main>
         <h1>Evaporation</h1>
-        <p>Vestibulum ac diam sit amet quam isque velit nisi, pretium ut lacinia in, elementum id enim. Lorem ipsum
-            dolor sit amet, consectetur adipiscing elit. Nulla quis lorem ut libero malesuada feugiat. Mauris blandit
-            aliquet elit, eget tincidunt nibh pulvinar a. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
-            Pellentesque in ipsum id orci porta dapibus. Pellentesque in ipsum id orci porta dapibus. Curabitur aliquet
-            quam id dui posuere blandit. Sed porttitor lectus nibh. </p>
+        <p>According to wikipedia evaporation is a sort of vaporization that happens on a liquid's surface when it transitions into the gas phase. When
+        humidity impacts the rate of evaporation of water, a high concentration of the evaporating component in the surrounding
+        gas considerably slows evaporation. When liquid molecules collide, they exchange energy depending on how they collide. </p>
     </main>
 
     <!-- FOOTER HERE -->
