--- a/water_cycle/precipitation.html
+++ b/water_cycle/precipitation.html
@@ -53,11 +53,11 @@
     <!-- CONTENT HERE -->
     <main>
         <h1>Precipitation</h1>
-        <p>Lorem Ipsum Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Quisque velit nisi, pretium
-            ut lacinia in, elementum id enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis lorem
-            ut libero malesuada feugiat. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Mauris blandit
-            aliquet elit, eget tincidunt nibh pulvinar a. Pellentesque in ipsum id orci porta dapibus. Pellentesque in
-            ipsum id orci porta dapibus. Curabitur aliquet quam id dui posuere blandit. Sed porttitor lectus nibh. </p>
+        <p>Precipitation is any liquid or frozen water that forms in the atmosphere and falls back to the Earth. It comes in many
+        forms, like rain, sleet, and snow. Along with evaporation and condensation, precipitation is one of the three major
+        parts of the global water cycle.Precipitation forms in the clouds when water vapor condenses into bigger and bigger droplets of water. When the drops
+        are heavy enough, they fall to the Earth. If a cloud is colder, like it would be at higher altitudes, the water droplets
+        may freeze to form ice.</p>
     </main>
 
     <!-- FOOTER HERE -->
