--- a/lesson3/typograph.html
+++ b/lesson3/typograph.html
@@ -24,10 +24,10 @@
     </header>
     <nav>
         <ul>
-            <li><a class="" href="index.html">Home</a></li>
-            <li><a class="" href="target audience.html">Target Audience</a></li>
-            <li><a class="" href="color scheme.html">Color Scheme</a></li>
-            <li><a class="active" href="typograph.html">Typography</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="target audience.html">Target Audience</a></li>
+            <li><a href="color scheme.html">Color Scheme</a></li>
+            <li class="active"><a href="typograph.html">Typography</a></li>
         </ul>
     </nav>
     <main>
