--- a/assignment-portal.html
+++ b/assignment-portal.html
@@ -25,7 +25,7 @@
         </ul>
 
         <ul>
-            <li>Lesson 03 : <a href="">Title</a></li>
+            <li>Lesson 03 : <a href="lesson3/index.html"> Website plan</a></li> <a href="water_cycle/index.html">WaterCycle</a></li>
         </ul>
 
         <ul>
