--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -29,7 +29,7 @@
                 <p>Roccat</p>
                 <a href="https://www.roccat.com/">Roccat.com</a>
             </div>
-            <img src="images/robo.png" alt="roccat">
+            <img src="images/robo.jpg" alt="roccat">
             <p>
                 According to the law of proximity, you have to group related elements together to communicate that they
                 form a whole.
@@ -41,7 +41,7 @@
                 <p>Gamefly</p>
                 <a href="https://www.gamefly.com/">Gamefly.com</a>
             </div>
-            <img src="images/game.png" alt="Gamefly Website">
+            <img src="images/game.jpg" alt="Gamefly Website">
             <p>
                 Visual Hierarchy teaches that there is an order in which the human eye perceives what it sees.
                 Gamefly made its "Sign Up Now" button more visual for new users.</p>
@@ -52,7 +52,7 @@
                 <p>Tesla</p>
                 <a href="https://www.tesla.com/">Tesla.com</a>
             </div>
-            <img src="images/tes.png" alt="Tesla Website">
+            <img src="images/tes.jpg" alt="Tesla Website">
             <p>
                 Fitt's Law is about the bigger an object and the closer it is, the easier it is to use.
                 Tesla made the buttons “Custom Order” and “Existing Inventory” large enough and in an easy place to see
