--- a/assignment-portal.html
+++ b/assignment-portal.html
@@ -33,7 +33,7 @@
         </ul>
 
         <ul>
-            <li>Lesson 05 : <a href="http://">Title</a></li>
+            <li>Lesson 05 : <a href="dom/bom.html">Dom Manipulation</a>
         </ul>
 
         <ul>
