--- a/chamber/index.html
+++ b/chamber/index.html
@@ -120,7 +120,12 @@
                     <h3><li>Mole Nation Park</li>
                         <li>Kakum Nation Park</li>
                         <li>Ghana Monkey Village</li>
-                    
+                        <li>Mole Nation Park</li>
+                        <li>Kakum Nation Park</li>
+                        <li>Ghana Monkey Village</li>
+                   <li>Ghana Monkey Village</li>
+                    <li>Mole Nation Park</li>
+                    <li>Kakum Nation Park</li>
                     
                     </p></h3>
                     </ul>
