--- a/lasson8/tablebuild.html
+++ b/lasson8/tablebuild.html
@@ -16,7 +16,7 @@
 
     <table>
         <tr>
-            <th scope="colgroup" colspan="3">ACME Wildwest</th>
+            <th scope="colgroup" colspan="3"></th>
         </tr>
         <tr>
             <th scope="col" id="period">Period</th>
