--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width= , initial-scale=1.0">
     <title>Lesson 8</title>
     <meta name="description" content="Lesson8 tablebuild ">
-    <link rel="stylesheet" href="styles/tablebuild.css">
+    <link rel="stylesheet" href="styles/tablecss.css">
 </head>
 
 <body>
