--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -54,7 +54,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li class="active"><a href="discover.html">Discover</a></li>
                 <li><a href="#">Directory</a></li>
-                <li><a href="#">Join</a></li>
+                <li><a href="join.html">Join</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
@@ -213,7 +213,11 @@
             <div>
                 <p>info@Redemption.com</p>
                 <p>406.758.2800</p>
-                <p><span class="material-icons-outlined">room</span>Map</p>
+                <h4> Map</h4>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19026.713351685758!2d-0.32570665260529963!3d5.552550738526964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb9a7f0829c925d61!2sJOY%20HILLS%20HOTEL!5e0!3m2!1sen!2sus!4v1667541846521!5m2!1sen!2sus"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
         </div>
