--- a/chamber/join.html
+++ b/chamber/join.html
@@ -92,12 +92,11 @@
 
             <fieldset>
                 <legend>Enter Contact Information</legend>
-                <p><i>Fields with red border are required.</i></p>
                 <label class="top">First Name: <input type="text" name="fname" required></label>
                 <label class="top">Last Name: <input type="text" name="lname" required></label>
                 <label class="top">Business Position: <input type="text" name="position" pattern="[a-zA-Z0-9- ]{1,7}"
                         id="businessPosition"></label>
-                <label class="top">E-mail: <input type="email" name="email" placeholder="E-mail" required></label>
+                <label class="top">E-mail: <input type="email" name="email" placeholder="Example787@gmail.com" required></label>
                 <label class="top">Cellphone no.: <input type="tel" name="phone" required></label>
                 <label class="top">Business Name: <input type="text" name="businessName" required></label>
                 <label class="top">Business Description: <textarea placeholder="Type here"
