--- a/lesson07/laszyload.html
+++ b/lesson07/laszyload.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Progressive Loading images</title>
-    <meta name="description" content="Lesson 07 Progressive Loading images for Alma Benavides in WDD 230">
+    <meta name="description" content="Progressive Loading images by CHARLES AYIM ">
     <link rel="stylesheet" href="style/style.css">
 </head>
 
