--- a/lesson7/Lazyload.html
+++ b/lesson7/Lazyload.html
@@ -13,9 +13,12 @@
 <body>
     <h1>Progressive Loading images</h1>
     <picture><img src="https://picsum.photos/200/300?" data-src="https://picsum.photos/200/300?" alt="pic"></picture>
-    <picture><img src="https://picsum.photos/id/237/200/300?" data-src="https://picsum.photos/id/237/200/300?" alt="Dog"></picture>
-    <picture><img src="https://picsum.photos/seed/picsum/200/300" data-src="https://picsum.photos/200/300?grayscale" alt="plaint"></picture>
-    <picture><img src="https://picsum.photos/200/300?grayscale" data-src="images/photo-palmera.avif" alt="pic"></picture>
+    <picture><img src="https://picsum.photos/id/237/200/300?" data-src="https://picsum.photos/id/237/200/300?"
+            alt="Dog"></picture>
+    <picture><img src="https://picsum.photos/seed/picsum/200/300" data-src="https://picsum.photos/200/300?grayscale"
+            alt="plaint"></picture>
+    <picture><img src="https://picsum.photos/200/300?grayscale" data-src="images/photo-palmera.avif" alt="pic">
+    </picture>
     <picture><img src="https://picsum.photos/200/300" data-src="https://picsum.photos/200/300" alt="pic"></picture>
     <script src="scripts.js"></script>
 </body>
