--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -34,7 +34,7 @@
     <header>
         <div class="header-content">
             <picture>
-                <img src="images/Group 2.jpg" alt="logo">
+                <img src="images/logo 22.webp"logo">
             </picture>
             <section>
                 <h1>Chamber of Commerce</h1>
@@ -71,7 +71,7 @@
 
         <div class="media-card">
 
-            <img src="images/ifeoluwa-a--CgUhaShACE-unsplash.jpg" data-src="images/big-fish.jpg.webp" alt="big-fish">
+            <img src="images/black star.webp" data-src="images/black star.webp" alt="black Star">
 
             <div class="discover-article">
                 <h2 class="media-title">The view of the black star sqaure</h2>
@@ -84,12 +84,12 @@
 
         <div class="media-card">
             <picture class="first-media-card-image">
-                <img src="images/hello-lightbulb-Y5biRJCR-Q4-unsplash.jpg" data-src="images/cowboys.webp" alt="cowboys">
+                <img src="images/kakum park.webp" data-src="images/kakum park.webp" alt="kakum">
             </picture>
             <div class="discover-article">
                 <h2>Kakum National Park</h2>
                 <p>
-                    Rodeo has been a part of Montana's culture since the first cowboys arrived over 150 years ago.
+                    Rodeo has been a part of Accra-Ghana culture since the first cowboys arrived over 150 years ago.
                 </p>
 
             </div>
@@ -97,15 +97,14 @@
 
         <div class="media-card">
             <picture class="third-discover-image">
-                <img src="images/ifeoluwa-a-0qz48eDvNHo-unsplash.jpg" data-src="images/in-focus-kalispell-chamber.webp"
-                    alt="in-focus-kalispell-chamber">
+                <img src="images/kwame N.webp" date-src="images/kwame N.webp" alt="kwame N">
             </picture>
             <div class="discover-article">
                 <h2>
                    Redemption Chamber of Commerce - Opening Day: Connecting Leaders with Legislators
                 </h2>
                 <p>
-                    The 66th Montana Legislature is officially open for business after gaveling in in January.
+                    The 66th Accra-Ghana Legislature is officially open for business after gaveling in in January.
                 </p>
 
             </div>
@@ -113,10 +112,10 @@
 
         <div class="media-card">
             <picture class="fourth-discover-image">
-                <img src="images/kofi-nuamah-barden-QHMsU8GnPGM-unsplash.jpg" data-src="images/meeting.webp" alt="meeting">
+                <img src="images/ghana fabric.webp" data-src="images/ghana fabric.webp" alt="Fabrics">
             </picture>
             <div class="discover-article">
-                <h2>The volta Lake</h2>
+                <h2>Beautiful and colorful Ghana Fabrics</h2>
                 <p>
                     Growth will continue but taper to a more modest rate over the next
                     few years.
@@ -127,14 +126,14 @@
 
         <div class="media-card">
             <picture class="fifth-discover-image">
-                <img src="images/richard-jacobs-8oenpCXktqQ-unsplash.jpg" data-src="images/red-lion-hotel.webp" alt="red-lion-hotel">
+                <img src="images/elephants.webp" data-src="images/elephants.webp" alt="African Elephant">
             </picture>
             <div class="discover-article">
                 <h2>
                     Red Lion Hotel Redemption offers meeting rooms and event spaces
                 </h2>
                 <p>
-                    Redemption Red Lion Hotel now opened its doors to business men and women of Flathead Valley.
+                    Redemption Red Lion Elephant park now opened its doors to business men and women of Flathead Valley.
                 </p>
 
             </div>
@@ -142,14 +141,14 @@
 
         <div class="media-card">
             <picture class="sixth-discover-image">
-                <img src="images/yoel-winkler-zCAh6tOWFt8-unsplash.jpg" data-src="images/reporter.webp" alt="reporter">
+                <img src="images/canon.webp" data-src="images/canon.webp" alt="canon">
             </picture>
             <div class="discover-article">
                 <h2>
                     Redemption Chamber 
                 </h2>
                 <p>
-                    
+                    Rivers are beautiful and very clean in Accra-Ghana
                 </p>
 
             </div>
@@ -157,7 +156,7 @@
 
         <div class="media-card">
             <picture class="seventh-discover-image">
-                <img src="images/tobias-nii-kwatei-quartey-rpcCF2Asrx8-unsplash.jpg"  alt="cocoa farmer">
+                <img src="images/coca.webp" data-src="images/coca.webp" alt="cocoa farmer">
             </picture>
             <div class="discover-article">
                 <h2>Cocoa Plantations</h2>
@@ -170,13 +169,12 @@
 
         <div class="media-card">
             <picture class="eighth-discover-image">
-                <img src="images/kojo-nana-GtnFtsPXKME-unsplash.jpg" data-src="images\hero-img-medium.webp" alt="">
+                <img src="images/national.webp" data-src="images\national.webp" alt="">
             </picture>
             <div class="discover-article">
-                <h2>What You Need To Know About </h2>
+                <h2>What You Need To Know About Ghana culture? </h2>
                 <p>
-                    Investment in the City of  has increased and tourism remains a strong economic driver for
-                    the region.
+                
                 </p>
 
             </div>
@@ -184,7 +182,7 @@
 
         <div class="media-card">
             <picture class="ninth-discover-image">
-                <img src="images/etornam-ahiator-uYuKf76h6ZM-unsplash.jpg" data-src="images/committee.webp" alt="committee">
+                <img src="images/beach.webp"  data-src="images/beach.webp" alt="beach">
             </picture>
             <div class="discover-article">
                 <h2>
@@ -203,7 +201,7 @@
     <footer>
         <div class="footer-content">
             <div>
-                <a href="index.html"><img src="images/Group 2.jpg" alt="logo"></a>
+                <a href="index.html"><img src="images/logo 22.webp" alt="logo"></a>
             </div>
             <div>
                 <h3>Chamber of Commerce</h3>
