--- a/chamber/index.html
+++ b/chamber/index.html
@@ -34,7 +34,7 @@
     <header>
         <div class="header-content">
             <picture>
-                <a href="index.html"><img src="images/Group 2.jpg" alt="logo"></a>
+                <a href="index.html"><img src="images/logo 22.webp" alt="logo"></a>
             </picture>
             <section>
                 <h1>Redemption Chamber of Commerce</h1>
@@ -67,14 +67,14 @@
     </header>
 
 
-     <img src="images/heroSrc.jpg" alt="hero-image">
+     
 
     <main id="home-page">
         <div class="herodiv">
             <picture class="hero-img">
-                <source media="(min-width: 800px)" srcset="images/richard-jacobs-8oenpCXktqQ-unsplash.jpg">
+                <source media="(min-width: 800px)" srcset="images/elephants.webp">
                 <source media="(min-width: 390px)" srcset="images/richard-jacobs-8oenpCXktqQ-unsplash.jpg">
-                <img src="images/richard-jacobs-8oenpCXktqQ-unsplash.jpg" alt="hero-image">
+                <img src="images/elephants.webp" alt="hero-image">
             </picture>
             <section>
                 <h2>Discover the beauty of Ghana</h2>
@@ -196,7 +196,7 @@
     <footer>
         <div class="footer-content">
             <div>
-                <picture><img src="images/Group 2.jpg"alt="logo"></picture>
+                <picture><img src="images/logo 22.webp"logo"></picture>
             </div>
             <div>
                 <h3>Chamber of Commerce</h3>
