--- a/chamber/index.html
+++ b/chamber/index.html
@@ -58,7 +58,7 @@
             <ul id="primaryNav">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="discover.html">Discover</a></li>
-                <li><a href="#">Directory</a></li>
+                <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
@@ -196,10 +196,10 @@
     <footer>
         <div class="footer-content">
             <div>
-                <picture><img src="images/logo 22.webp"logo"></picture>
+                <picture><img src="images/logo 22.webp"logo></picture>
             </div>
             <div>
-                <h3>Chamber of Commerce</h3>
+                <h3> Rdemption Chamber of Commerce</h3>
                 <p>7845 MCcarthy Valley</p> 
                 <p>Redemption Hill, Accra-Ghana</p>
                
