--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -53,7 +53,7 @@
             <ul id="primaryNav">
                 <li><a href="index.html">Home</a></li>
                 <li class="active"><a href="discover.html">Discover</a></li>
-                <li><a href="#">Directory</a></li>
+                <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
@@ -204,13 +204,13 @@
                 <a href="index.html"><img src="images/logo 22.webp" alt="logo"></a>
             </div>
             <div>
-                <h3>Chamber of Commerce</h3>
+                <h3>Redemption Chamber of Commerce</h3>
                 <p>7845 MCcarthy Valley</p>
                 <p>Redemption Hill, Accra-Ghana</p>
             </div>
             <div>
                 <p>info@Redemption.com</p>
-                <p>406.758.2800</p>
+                <p>2089701516</p>
                 <h4> Map</h4>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19026.713351685758!2d-0.32570665260529963!3d5.552550738526964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb9a7f0829c925d61!2sJOY%20HILLS%20HOTEL!5e0!3m2!1sen!2sus!4v1667541846521!5m2!1sen!2sus"
