--- a/chamber/index.html
+++ b/chamber/index.html
@@ -199,7 +199,7 @@
                 <picture><img src="images/logo 22.webp"logo></picture>
             </div>
             <div>
-                <h3> Rdemption Chamber of Commerce</h3>
+                <h3> Redemption Chamber of Commerce</h3>
                 <p>7845 MCcarthy Valley</p> 
                 <p>Redemption Hill, Accra-Ghana</p>
                
