--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -86,7 +86,7 @@
      <div class="footer-content">
             <div>
                 <picture>
-                    <img src="images/logo 22.webp"alt="logo">
+                    <img src="images/logo 22.webp" alt="logo">
                 </picture>
             </div>
             <div>
@@ -96,9 +96,9 @@
                
             </div>
             <div>
-            <h4><p>info@Redemptionchamber.com</p>
-             <p>2089701516</p>
-            Map</h4>
+           <h4>info@Redemptionchamber.com</h4>
+            <p>2089701516</p>
+            <p>Map</p>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19026.713351685758!2d-0.32570665260529963!3d5.552550738526964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb9a7f0829c925d61!2sJOY%20HILLS%20HOTEL!5e0!3m2!1sen!2sus!4v1667541846521!5m2!1sen!2sus"
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
@@ -115,7 +115,7 @@
             <p>WDD 230 Project</p>
             <p>Last Modified: <span id="currentDateandTime"></span></p>
         </div>
-        
+
  </footer>
     <script src="js/directory.js"></script>
     <script src="js/script.js"></script>
