--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -34,7 +34,7 @@
     <header>
         <div class="header-content">
             <picture>
-                <img src="images/logo 22.webp"logo">
+                <a href="index.html"><img src="images/Group 2.jpg" alt="logo"></a>
             </picture>
             <section>
                 <h1>Chamber of Commerce</h1>
@@ -55,7 +55,7 @@
                 <li class="active"><a href="discover.html">Discover</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
