--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -60,7 +60,7 @@
                 <li><a href="discover.html">Discover</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li class="active"><a href="join.html">Join</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
 
         </nav>
@@ -107,7 +107,7 @@
         </div>
 
         <div class="base-footer">
-            <p>&copy;<span id="year"></span> Chamber of Commerce - Redemption</p>
+            <p>&copy;<span id="year"></span> Redemption Chamber of Commerce</p>
             <p>Charles Ayim</p>
             <p>WDD 230 Project</p>
             <p>Last Modified: <span id="currentDateandTime"></span></p>
