--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -33,7 +33,7 @@
  <header>
         <div class="header-content">
             <picture>
-                <img src="images/logo 22.webp" alt="logo">
+                <a href="index.html"><img src="images/Group 2.jpg" alt="logo"></a>
             </picture>
             <section>
                 <h1> Chamber of Commerce</h1>
@@ -84,11 +84,9 @@
 
     <footer>
      <div class="footer-content">
-            <div>
-                <picture>
-                    <img src="images/logo 22.webp" alt="logo">
-                </picture>
-            </div>
+        <div>
+            <a href="index.html"><img src="images/Group 2.jpg" alt="logo"></a>
+        </div>
             <div>
                 <h3> Redemption Chamber of Commerce</h3>
                 <p>7845 MCcarthy Valley</p> 
@@ -97,7 +95,7 @@
             </div>
             <div>
            <h4>info@Redemptionchamber.com</h4>
-            <p>2089701516</p>
+            2089701516
             <p>Map</p>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19026.713351685758!2d-0.32570665260529963!3d5.552550738526964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb9a7f0829c925d61!2sJOY%20HILLS%20HOTEL!5e0!3m2!1sen!2sus!4v1667541846521!5m2!1sen!2sus"
